--- a/BE/package.json
+++ b/BE/package.json
@@ -29,6 +29,7 @@
     "mysql2": "^3.12.0",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.10.1",
-    "sequelize": "^6.37.5"
+    "sequelize": "^6.37.5",
+    "slugify": "^1.6.6"
   }
 }
