--- a/BE/.env
+++ b/BE/.env
@@ -1,7 +1,7 @@
 DB_HOST=localhost
 DB_USER=root
 DB_PASS=mysql
-DB_NAME=thuctap_vnpt
+DB_NAME=ecommerce
 DB_DIALECT=mysql
 
 JWT_SECRET=R@nd0mS3cr3tK3yF0rJWT
